samples/_failures_safe/1761361360_29e25c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f7f62d78.c: In function ‘main’:
./samples/SAFE/__tmp_f7f62d78.c:127:9: error: expected declaration or statement at end of input
  127 |         MATRIX_ADD(result, matrix1, matrix2, rows1, cols1);
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_f7f62d78.c:127:9: error: expected declaration or statement at end of input
